--- a/contact_us.html
+++ b/contact_us.html
@@ -2,111 +2,13 @@
 <html>
 
 <head>
-    <title>Secure Bank - Contact Us</title>
-    <style>
-        /* Modern and professional styling */
-        body {
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            line-height: 1.6;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #004d99;
-            padding: 20px;
-            color: white;
-            text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav {
-            background-color: #004d99;
-            display: flex;
-            justify-content: center;
-            padding: 10px;
-        }
-
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-            padding: 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        nav a:hover {
-            background-color: #003366;
-        }
-
-        .top-right {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-        }
-
-        .top-right a,
-        .top-right form {
-            margin-left: 10px;
-        }
-
-        .top-right input {
-            padding: 5px 10px;
-            border-radius: 5px;
-            border: none;
-        }
-
-        .form-section {
-            margin: 20px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            max-width: 400px;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        footer {
-            background-color: #004d99;
-            padding: 10px;
-            color: white;
-            text-align: center;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-
-        /* Mobile responsive styling */
-        @media (max-width: 768px) {
-            header {
-                text-align: left;
-                padding: 10px;
-            }
-
-            nav {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            nav a {
-                margin: 5px 0;
-            }
-
-            .top-right {
-                position: static;
-                margin-bottom: 10px;
-                text-align: center;
-            }
-        }
-    </style>
+    <title>Credit Cards</title>
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="style.css">
     <!-- Link Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
 </head>
+
 
 <body>
     <!-- Header -->
